--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #373737;
   font-family: 'Archivo', 'Helvetica Neue', 'Roboto', Arial, sans-serif;
 }
 
